[gd_scene load_steps=4 format=3 uid="uid://d0lbjiaf7o5ir"]

[ext_resource type="Script" uid="uid://lffcerynycgi" path="res://addons/sprouty_dialogs/editor/components/scripts/array_field_item.gd" id="1_606o8"]
[ext_resource type="StyleBox" uid="uid://dfa36wxs72oc0" path="res://addons/sprouty_dialogs/editor/theme/empty_panel.tres" id="3_tlk88"]

[sub_resource type="DPITexture" id="DPITexture_7k83i"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#ff5d5d\" d=\"M2 1v8.586l1.293-1.293a1 1 0 0 1 1.414 0L7 10.587l2.293-2.293a1 1 0 0 1 1.414 0L13 10.586l1-1V6H9V1H2zm8 0v4h4zm-6 9.414-2 2V15h12v-2.586l-.293.293a1 1 0 0 1-1.414 0L10 10.414l-2.293 2.293a1 1 0 0 1-1.414 0L4 10.414z\"/></svg>
"

[node name="ArrayFieldItem" type="HBoxContainer"]
script = ExtResource("1_606o8")

[node name="IndexLabel" type="Label" parent="."]
layout_mode = 2
text = "0"

[node name="TypeField" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = ExtResource("3_tlk88")

[node name="ValueField" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("3_tlk88")

[node name="RemoveButton" type="Button" parent="."]
layout_mode = 2
icon = SubResource("DPITexture_7k83i")
